plugins {
    id 'java'
}

group 'me.sunstorm'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(18))
    }
}

tasks.withType(JavaCompile) {
    options.encoding('UTF-8')
}

repositories {
    mavenCentral()
}

dependencies {
    implementation   group: 'org.jetbrains',            name: 'annotations',      version: '23.0.0'
    implementation   group: 'org.slf4j',                name: 'slf4j-api',        version: '1.7.36'
    implementation   group: 'org.apache.logging.log4j', name: 'log4j-api',        version: '2.18.0'
    runtimeClasspath group: 'org.apache.logging.log4j', name: 'log4j-core',       version: '2.18.0'
    implementation   group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.18.0'

    compileOnly         group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
}